--- a/type.css/type.css
+++ b/type.css/type.css
@@ -1,14 +1,14 @@
 /*
-*@ Name:        type.css V1.0.0
+*@ Name:        type.css V1.0.1
 *@ Author:      一丝(yisibl) 
-*@ Update:      2013-9-9 15:45:40
+*@ Update:      2013-9-24 16:55:04
 *@ Copyright:	MIT License 
 */
 body{
     font-size: 14px;
     line-height: 1.8;
 }
-a {
+.type a {
     color:#3187DB;
 }
 .type a:hover,
@@ -20,10 +20,6 @@ a {
 .type ins:hover {
     text-decoration: none;
     border-bottom: 1px solid;
-}
-/* 标记，类似于手写的荧光笔的作用 */
-mark {
-    background: #ff0;
 }
 
 acronym, abbr {
@@ -86,8 +82,8 @@ em{
     line-height: 1.8;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-weight:inherit;
-    font-style:inherit;
+    font-weight:normal;
+    font-style:normal;
 }
 
 /*
@@ -169,9 +165,7 @@ h6 {
 th {
     font-weight:inherit;
 }
-.type table {
-    width:100%;
-}
+
 .type th, .type td {
     border:1px solid #CCC;
     padding: 5px 10px;
@@ -179,6 +173,8 @@ th {
 .type table tr:nth-child(odd) td {
     background-color: #f5f5f5;
 }
+
+/* 代码 */
 .type code {
     margin: 0 2px;
     padding: 0 4px;
@@ -190,7 +186,7 @@ th {
 .type pre{
     background-color: #F8F8F8;
     border: 1px solid #DDD;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 18px;
     overflow: auto;
     padding: 6px 10px;
@@ -199,8 +195,6 @@ th {
 
 hr{
     border:0 none;
-    height: 10px;
-    line-height: 0;
     border-bottom: 1px solid #999;
     margin-top: 14px;
     margin-bottom: 14px;
