--- a/neat.css
+++ b/neat.css
@@ -567,3 +567,42 @@ audio:not([controls]) {
 [draggable] {
 	cursor: move;
 }
+
+/*
+ * 居中 HTML5 dialog 元素
+ * Chrome 31 支持，需开启 chrome://flags/#enable-experimental-web-platform-features
+ * ::backdrop 定义遮罩样式
+ * Chrome 28 之前、Firefox 中 height 不支持 fit-content https://src.chromium.org/viewvc/blink?revision=148314&view=revision
+ * Demo: http://jsbin.com/iPACab/1
+ */
+dialog{
+	border:1px solid;
+	padding:1em;
+	margin: auto;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 50%;
+	-webkit-transform: translatey(-50%);
+	-moz-transform: translatey(-50%);
+	-ms-transform: translatey(-50%);
+	-o-transform: translatey(-50%);
+	transform: translatey(-50%);
+
+	width: -moz-fit-content;
+	width: -webkit-fit-content;
+	width: fit-content;
+
+	height: -moz-fit-content;
+	height: -webkit-fit-content;
+	height: fit-content;
+}
+
+dialog::backdrop{
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: rgba(0, 0, 0, .3);
+}
