Write doc in markdown

--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -4,7 +4,5 @@ layout: default
 
 <div id="main">
   <div id="sidebar"></div>
-  <div id="content" class="type">
-    <h2>TODO</h2>
-  </div>
+  <div id="content">{{ content }}</div>
 </div>
