增加 button.css form.css(移植自brix-style)

--- a/src/utils.css
+++ b/src/utils.css
@@ -11,7 +11,8 @@
 * @Doc: http://nicolasgallagher.com/micro-clearfix-hack/
 */
 
-.clearfix:before, .clearfix:after {
+.clearfix:before,
+.clearfix:after {
     content: "";
     display: table;
 }
@@ -54,13 +55,13 @@
 }
 
 /* 强制不换行 */
-.nowrap{
+.nowrap {
     white-space: nowrap;
     word-wrap: normal;
 }
 
 /* 连续字符换行 */
-.wrap{
+.wrap {
     white-space: normal;
     word-wrap: break-word;
 }
@@ -73,8 +74,7 @@
 * 1. Chrome 21+ bug https://bugs.webkit.org/show_bug.cgi?id=121902 
 */
 
-.ellipsis
-{
+.ellipsis {
     white-space: nowrap;
     word-wrap: normal;
     overflow: hidden;
@@ -90,8 +90,10 @@
     text-align: left; /* 1 */
 }
 
-/* 图片替换
-   ========================================================================== */
+
+/* --------------------------------------------------------------------------
+   图片替换
+   -------------------------------------------------------------------------- */
 
 /** 隐藏文字
 * 1.text-indent:-999em 存在性能问题：
@@ -103,10 +105,11 @@
     overflow: hidden;
 }
 
-/** 裁剪方式隐藏元素
-* 1. IE6-8 有严重漏洞，请勿使用 https://www.hkcert.org/my_url/zh/101104_ms_ie_css_tagparsing_vuln
-* 2. VoiceOver 无法读出宽高为 0 的元素
-*/
+/**
+ * 裁剪方式隐藏元素
+ * 1. IE6-8 有严重漏洞，请勿使用 https://www.hkcert.org/my_url/zh/101104_ms_ie_css_tagparsing_vuln
+ * 2. VoiceOver 无法读出宽高为 0 的元素
+ */
 .clip-hide {
     position: absolute !important; /*clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
     clip: rect(1px, 1px, 1px, 1px); /* 1 */
