--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css">
 </head>
 
-<body>
+<body bx-app>
   <div id="header">
     <div class="navbar">
       <div class="container">
@@ -39,8 +39,7 @@
           </li>
           <li>
             <a href="https://github.com/thx/cube">
-              Github
-              <i class="dot"></i>
+              Github <i class="dot"></i>
             </a>
           </li>
         </ul>
@@ -49,7 +48,17 @@
   </div>
 
   <div id="page">
-    {{ content }}
+    <input type="checkbox" id="checkbox">
+    <label class="checklabel" for="checkbox"></label>
+    <div id="main" class="type">
+      <div id="sidebar">
+        <div bx-name="mosaics/stoc" bx-config="{essay: 'body'}" bx-tpl="#J_tocTpl"></div>
+        <script type="text/xtemplate" id="J_tocTpl">{% include tocTpl.html %}</script>
+      </div>
+      <div id="content">
+        {{ content }}
+      </div>
+    </div>
   </div>
 
   <div id="footer" class="">
@@ -63,7 +72,8 @@
     </p>
   </div>
 
-  <script src="http://g.tbcdn.cn/kissy/k/1.4.0/seed-min.js"></script>
+  <script src="http://g.tbcdn.cn/??kissy/k/1.4.0/seed-min.js,thx/brix-core/3.4.0/brix-min.js"></script>
+  <script src="{{ site.baseurl }}/assets/app.js"></script>
 </body>
 
 </html>
