Added modules partial; added duoshuo
removed unnecessary modules in build result

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
         </h1>
         <ul class="nav">
           <li>
-            <a href="{{ site.baseurl }}/demo/type/">
-              Type.css 演示 <i class="dot"></i>
+            <a href="{{ site.baseurl }}/demo/">
+              演示 <i class="dot"></i>
             </a>
           </li>
           <li>
@@ -57,6 +57,9 @@
       </div>
       <div id="content">
         {{ content }}
+        <!-- Duoshuo Comment BEGIN -->
+        <div class="ds-thread"></div>
+        <!-- Duoshuo Comment END -->
       </div>
     </div>
   </div>
