Added more documents

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/iconfont.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/utils.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/github.css">
 </head>
 
 <body bx-app>
