--- a/_includes/cubeBuild.html
+++ b/_includes/cubeBuild.html
@@ -1,9 +1,9 @@
 <p>
-  <a href="http://g.tbcdn.cn/thx/cube/1.0.6/cube.css">
+  <a href="http://g.tbcdn.cn/thx/cube/{{ site.version }}/cube.css">
     <i class="iconfont">&#523;</i> cube.css
   </a>
   <br>
-  <a href="http://g.tbcdn.cn/thx/cube/1.0.6/cube-min.css">
+  <a href="http://g.tbcdn.cn/thx/cube/{{ site.version }}/cube-min.css">
     <i class="iconfont">&#295;</i> cube-min.css
   </a>
 </p>
