--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/utils.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/github.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/editor.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/tomorrow.css">
 </head>
 
 <body bx-app>
@@ -77,6 +79,7 @@
   </div>
 
   <script src="http://g.tbcdn.cn/??kissy/k/1.4.0/seed-min.js,thx/brix-core/3.4.0/brix-min.js"></script>
+  <script src="{{ site.baseurl }}/assets/libs/ace/build/src/ace.js"></script>
   <script src="{{ site.baseurl }}/assets/app.js"></script>
 </body>
 
