--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
-
 <head>
-  <meta charset=utf-8 />
+  <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <!-- 优先使用IE最新版本和 Chrome -->
   <meta name="viewport" content="initial-scale=1, maximum-scale=2, minimum-scale=1">
@@ -16,10 +15,9 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/layout.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/iconfont.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/utils.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/button.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/github.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/editor.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/tomorrow.css">
 </head>
 
 <body bx-app>
@@ -79,7 +77,6 @@
   </div>
 
   <script src="http://g.tbcdn.cn/??kissy/k/1.4.0/seed-min.js,thx/brix-core/3.4.0/brix-min.js"></script>
-  <script src="{{ site.baseurl }}/assets/libs/ace/build/src/ace.js"></script>
   <script src="{{ site.baseurl }}/assets/app.js"></script>
 </body>
 
