--- a/assets/style.css
+++ b/assets/style.css
@@ -188,6 +188,52 @@
     font-size: 14px;
     color: #999;
 }
- .cube-modules .iconfont {
+.cube-modules .iconfont {
     font-size: 30px;
- }
+}
+.type code {
+    border: none;
+}
+/*{{
+* 暂无栅格化，为了写 demo, 我先加了如下几行宽度样式
+*/
+.span12 {
+    width: 1170px;
+}
+.span11 {
+    width: 1070px;
+}
+.span10 {
+    width: 970px;
+}
+.span9 {
+    width: 870px;
+}
+.span8 {
+    width: 770px;
+}
+.span7 {
+    width: 670px;
+}
+.span6 {
+    width: 570px;
+}
+.span5 {
+    width: 470px;
+}
+.span4 {
+    width: 370px;
+}
+.span3 {
+    width: 270px;
+}
+.span2 {
+    width: 170px;
+}
+.span1 {
+    width: 70px;
+}
+/*
+*
+}}*/
+
