--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
     <div class="navbar">
       <div class="container">
         <h1 class="logo">
-          <a href="{{ site.baseurl }}/">Cube</a>
+          <a href="{{ site.baseurl }}/"><b class="iconfont icon-logo">&#444;</b>Cube</a>
         </h1>
         <ul class="nav">
           <li>
