Refactored tasks; added base task; add cube comments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,10 +59,7 @@
       <div id="content">
         {{ content }}
 
-        <!-- Duoshuo Comment BEGIN -->
-        <div class="ds-thread"></div>
-        <!-- Duoshuo Comment END -->
-
+        {% include duoshuo.html %}
       </div>
     </div>
   </div>
