--- a/_includes/cubeUsage.html
+++ b/_includes/cubeUsage.html
@@ -1,3 +1,3 @@
 ```html
-<link rel="stylesheet" type="text/css" href="http://g.tbcdn.cn/thx/cube/{{site.version}}/cube-min.css"></link>
+<link rel="stylesheet" type="text/css" href="http://g.tbcdn.cn/thx/cube/{{site.version}}/cube-min.css">
 ```
