Add table of content

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,9 +15,9 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/base.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css">
 </head>
-<body class="type" bx-app>
+<body bx-app>
   {{ content }}
-  <script src="http://g.tbcdn.cn/kissy/k/1.4.0/seed-min.js"></script>
+  <script src="http://g.tbcdn.cn/??kissy/k/1.4.0/seed-min.js,thx/brix-core/3.4.0/brix-min.js"></script>
   {% if page.script %}
   <script src="{{ site.baseurl }}/{{ page.script }}"></script>
   {% endif %}
