--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,8 @@ script: assets/post.js
   <div id="content">
     <div id="content-wrap">
       {% include ceiling.html %}
-      <article>
+      {% include toc.html %}
+      <article class="type">
         <h1>{{ page.title }}</h1>
         <div class="authors">
           {% for author in page.authors %}
@@ -18,9 +19,7 @@ script: assets/post.js
         </div>
         {{ content }}
       </article>
-      <!-- Duoshuo Comment BEGIN -->
-      <div class="ds-thread"></div>
-      <!-- Duoshuo Comment END -->
+      {% include duoshuo.html %}
     </div>
   </div>
   <div id="nav" class="clearfix">
@@ -38,7 +37,7 @@ script: assets/post.js
       </li>
     {% endfor %}
       <li>
-        <a href="https://github.com/thx/base" class="entry">
+        <a href="https://github.com/thx/cube" class="entry">
           <i class="iconfont">&#61464;</i> Github
         </a>
       </li>
