--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@ script: assets/post.js
         {{ content }}
       </article>
       {% include duoshuo.html %}
+      {% include footer.html %}
     </div>
   </div>
   <div id="nav" class="clearfix">
